(feature): Add path tracing renderer with recursive Monte Carlo integration
Introduced the `RendererPathTracer` module with Monte Carlo sampling for global illumination, supporting features like recursive reflections, refractions, Fresnel effects, and emissive lighting. Updated the `Material` to adjust default roughness and refractive index values. Enhanced the main application with example scenes and transitioned to the new renderer.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ target_sources(glimmer_vector
             src/glimmer/scene.ixx
             src/glimmer/renderer.ixx
             src/glimmer/renderer_simple_rt.ixx
+        src/glimmer/renderer_path_tracer.ixx
             src/glimmer/obj.ixx
 )
 
